--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,18 @@
 }
 .cards {
   position: relative;
-  top: -180px;
+}
+.footer {
+  flex-wrap: wrap;
+  margin: auto;
+}
+.footer ul {
+  width: 250px;
+}
+.footer ul li {
+  padding-left: 20px;
+  padding-bottom: 20px;
+}
+.footer ul li a {
+  color: #9e9e9e;
 }
